--- a/module_2_assignment/css/styles.css
+++ b/module_2_assignment/css/styles.css
@@ -21,20 +21,22 @@ h1 {
 h2 {
   font-size: 1.25em;
   margin: 0px;
-  border-left: 2px solid black;
-  border-bottom: 2px solid black;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
   position: absolute;
   top: 0px;
   right: 0px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
   padding-top: 5px;
   padding-bottom: 5px;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .box {
   position: relative;
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: #A52A2A;
   font-family: Helvetica;
   background-color: grey;  
